# qxggit

./: .mxproject  32demo.ioc  CMakeLists.txt  stm32g431rbtx_app.ld  stm32g431rbtx_boot.ld
Core/Inc/: bootloader.h  ota.h  stm32g4xx_hal_conf.h  stm32g4xx_it.h
Core/Src/: bootloader.c  main.c  ota.c  stm32g4xx_hal_msp.c  stm32g4xx_it.c
cmake/: gcc-arm-none-eabi.cmake
cmake/stm32cubemx/: CMakeLists.txt
